--- a/app/partials/nav.html
+++ b/app/partials/nav.html
@@ -1,7 +1,10 @@
-<header class="mdl-layout__header mdl-layout__header--scroll">
+<header class="mdl-layout__header mdl-layout__header--waterfall kw-header">
   <div class="mdl-layout__header-row">
     <!-- Title -->
-    <span class="mdl-layout-title">Title</span>
+    <span class="mdl-layout-title">
+      <img class="logo" src="images/wojtczyk_logo_small.png" alt="Logo">
+      Kamil Wojtczyk
+    </span>
     <!-- Add spacer, to align navigation to the right -->
     <div class="mdl-layout-spacer"></div>
     <!-- Navigation -->
