Added new fonts + moved navbar styling to separate SCSS file

--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -35,7 +35,7 @@
   <![endif]-->
 
   <!-- Styles -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Lora|Lobster">
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-red.min.css"/>
   <link rel="stylesheet" href="styles/main.css">
 </head>
