--- a/app/partials/nav.html
+++ b/app/partials/nav.html
@@ -3,7 +3,7 @@
     <!-- Title -->
     <span class="mdl-layout-title">
       <img class="logo" src="images/wojtczyk_logo_small.png" alt="Logo">
-      Kamil Wojtczyk
+      <span class="title">Kamil Wojtczyk</span>
     </span>
     <!-- Add spacer, to align navigation to the right -->
     <div class="mdl-layout-spacer"></div>
@@ -17,7 +17,9 @@
   </div>
 </header>
 <div class="mdl-layout__drawer">
-  <span class="mdl-layout-title">Title</span>
+  <span class="mdl-layout-title">
+    <span class="title">Kamil Wojtczyk</span>
+  </span>
   <nav class="mdl-navigation">
     <a class="mdl-navigation__link" href="">Link</a>
     <a class="mdl-navigation__link" href="">Link</a>
