--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -34,6 +34,9 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
   <![endif]-->
 
+  <!-- Script that needs to load before the page -->
+  <script src="scripts/picturefill.min.js"></script>
+
   <!-- Styles -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Lora|Lobster">
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-red.min.css"/>
