Added intro graphic* + a tiny bit of styling
* this is a full resolution one, requires optimisation

--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -39,6 +39,7 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Lora|Lobster">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic">
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-red.min.css"/>
   <link rel="stylesheet" href="styles/main.css">
 </head>
