--- a/app/partials/nav.html
+++ b/app/partials/nav.html
@@ -1,9 +1,9 @@
-<header class="mdl-layout__header mdl-layout__header--waterfall kw-header">
+<header class="kw-header mdl-layout__header mdl-layout__header--waterfall">
   <div class="mdl-layout__header-row">
     <!-- Title -->
     <span class="mdl-layout-title">
       <img class="logo" src="images/wojtczyk_logo_small.png" alt="Logo">
-      <span class="title">Kamil Wojtczyk</span>
+      <!--<span class="title">Kamil Wojtczyk</span>-->
     </span>
     <!-- Add spacer, to align navigation to the right -->
     <div class="mdl-layout-spacer"></div>
