--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -10,7 +10,7 @@
   <meta name="msapplication-tap-highlight" content="no">
 
   <!-- Web Application Manifest -->
-  <link rel="manifest" href="images/touch/manifest.json">
+  <link rel="manifest" href="manifest.json">
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
 
@@ -23,7 +23,7 @@
   <link rel="mask-icon" href="images/touch/safari-pinned-tab.svg" color="#5bbad5">
   <link rel="shortcut icon" href="images/touch/favicon.ico">
   <!-- Tile icon for Win8 (144x144 + tile color) -->
-  <meta name="msapplication-config" content="images/touch/browserconfig.xml">
+  <meta name="msapplication-config" content="browserconfig.xml">
   <!-- Color the status bar on mobile devices -->
   <meta name="theme-color" content="#2196f3">
 
