--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -1,10 +1,10 @@
 <div class="kw-intro mdl-typography--text-center">
   <div class="overlay">
     <div class="slogan">
-      <h1 class="title mdl-typography--display-2 mdl-typography--text-uppercase">Hi! I'm <span class="blue">Kamil Wojtczyk</span></h1>
+      <h1 class="title mdl-typography--text-capitalize">Kamil Wojtczyk</h1>
     </div>
     <div class="sub-slogan">
-
+      <h1 class="title mdl-typography--text-capitalize">JavaScript Ninja</h1>
     </div>
   </div>
 </div>
