--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -1,5 +1,5 @@
 .kw-intro {
-  height: 400px;
+  height: 80vh;
   position: relative;
   background: url('../images/intro.jpg') no-repeat center;
   background-size: cover;
@@ -14,12 +14,28 @@
   }
 
   .overlay {
-    background: rgba(0,0,0, .35);
+    background: rgba(0, 0, 0, .35);
     width: 100%;
     height: 100%;
   }
 
-  .title {
+  .slogan {
+    padding-top: 60px;
+    color: #fff;
+
+    @media screen and (min-width: $layout-screen-size-threshold) {
+      padding-top: 160px;
+    }
+
+    h1 {
+      font-size: 6rem;
+      font-family: "Roboto", sans-serif;
+      //font-style: obli;
+      font-weight: 600;
+    }
+  }
+
+  .sub-slogan {
     color: #fff;
   }
 }
