--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -1,10 +1,12 @@
-<div class="kw-intro mdl-typography--text-center">
-  <div class="overlay">
-    <div class="slogan">
-      <h1 class="title mdl-typography--text-capitalize">Kamil Wojtczyk</h1>
-    </div>
-    <div class="sub-slogan">
-      <h1 class="title mdl-typography--text-capitalize">JavaScript Ninja</h1>
+<div class="kw-intro mdl-grid mdl-typography--text-center">
+  <div class="mdl-cell mdl-cell--4-offset-phone mdl-cell--8-col-phone">
+    <div class="overlay">
+      <div class="slogan">
+        <h1 class="title mdl-typography--text-capitalize">Kamil Wojtczyk</h1>
+      </div>
+      <div class="sub-slogan">
+        <h1 class="title mdl-typography--text-capitalize">JavaScript Ninja</h1>
+      </div>
     </div>
   </div>
 </div>
