--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -1,8 +1,8 @@
+
+
 .kw-intro {
   height: 80vh;
   position: relative;
-  background: url('../images/intro.jpg') no-repeat center;
-  background-size: cover;
 
   @media screen and (min-width: $layout-screen-size-threshold) {
     height: 85vh;
@@ -13,11 +13,11 @@
     //background: url('../images/intro-2x.jpg') no-repeat;
   }
 
-  .overlay {
+  /*.overlay {
     background: rgba(0, 0, 0, .35);
     width: 100%;
     height: 100%;
-  }
+  }*/
 
   .slogan {
     padding-top: 60px;
