--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -35,11 +35,13 @@
   <![endif]-->
 
   <!-- Script that needs to load before the page -->
-  <script src="scripts/picturefill.min.js"></script>
+  <!--<script src="scripts/picturefill.min.js"></script>-->
 
   <!-- Styles -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Lora|Lobster">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic">
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-red.min.css"/>
   <link rel="stylesheet" href="styles/main.css">
+
+  <script src="https://use.fontawesome.com/9f9305da79.js"></script>
 </head>
