Added further styling to the <nav> component

--- a/app/partials/nav.html
+++ b/app/partials/nav.html
@@ -1,9 +1,8 @@
-<header class="kw-header mdl-layout__header mdl-layout__header--transparent">
+<header id="kw-header" class="mdl-layout__header mdl-layout__header--transparent">
   <div class="mdl-layout__header-row">
     <!-- Title -->
     <span class="mdl-layout-title">
-      <img class="logo" src="images/wojtczyk_logo_small.png" alt="Logo">
-      <!--<span class="title">Kamil Wojtczyk</span>-->
+      <a href="/"><img class="logo" src="images/wojtczyk_logo_small.png" alt="Logo"></a>
     </span>
     <!-- Add spacer, to align navigation to the right -->
     <div class="mdl-layout-spacer"></div>
