--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,8 +1,13 @@
-$main: #2196f3;
+$main: #1eaaf1;
 $accent: #ff5252;
 
 $blacky: #464646;
 $gray: #757575;
+$light-gray: #dedede;
+$light-gray2: #fdfcfa;
 $dark-gray: #767777;
 
+$grid-tablet-breakpoint: 480px !default;
+$grid-desktop-breakpoint: 840px !default;
 $layout-screen-size-threshold: 1024px !default;
+
