Added intro card with photo, introductionary text and links to profiles

--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -1,11 +1,35 @@
-<div class="kw-intro mdl-grid mdl-typography--text-center">
-  <div class="mdl-cell mdl-cell--4-offset-phone mdl-cell--8-col-phone">
-    <div class="overlay">
-      <div class="slogan">
-        <h1 class="title mdl-typography--text-capitalize">Kamil Wojtczyk</h1>
-      </div>
-      <div class="sub-slogan">
-        <h1 class="title mdl-typography--text-capitalize">JavaScript Ninja</h1>
+<div class="kw-intro mdl-grid">
+  <div class="mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-cell--1-offset-desktop mdl-cell--10-col-desktop">
+    <div class="card-wide mdl-card mdl-shadow--2dp mdl-card--border">
+
+      <main class="mdl-layout__content">
+        <div class="mdl-grid">
+          <div class="dl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--5-col-desktop">
+            <div class="photo-outer">
+              <img class="photo mdl-shadow--4dp" src="../images/me.jpg" alt="profile photo">
+            </div>
+          </div>
+
+          <div class="dl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--7-col-desktop">
+            <div class="text-outer">
+              <div class="box-outer">
+                <div class="box">Hi!</div>
+              </div>
+
+              <div class="slogan">I'm <h1>Kamil Wojtczyk</h1></div>
+              <div class="sub-slogan"><h2>Full-Stack JavaScript Developer</h2></div>
+              <div class="about">Some text here</div>
+            </div>
+          </div>
+        </div>
+      </main>
+
+      <div class="card-bottom mdl-card__actions mdl-card--border mdl-shadow--2dp">
+        <div class="icons">
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://twitter.com/L0sKamil0s"><i class="fa fa-fw fa-twitter" aria-hidden="true"></i></a>
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://www.linkedin.com/in/kwojtczyk"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i></a>
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://github.com/LsKs"><i class="fa fa-fw fa-github" aria-hidden="true"></i></a>
+        </div>
       </div>
     </div>
   </div>
