--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,8 +12,10 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-font-smoothing: antialiased;
   font-weight: 400;
   margin: 2.1rem 0 1.68rem 0;
+  font-family: "Open Sans",sans-serif;
 }
 
 .kw-layout {
   background: url('../images/intro.jpg') no-repeat top / cover;
+  position: relative;
 }
