--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -1,5 +1,3 @@
-
-
 .kw-intro {
   height: 80vh;
   position: relative;
@@ -8,34 +6,108 @@
     height: 85vh;
   }
 
-  /* Retina-specific stuff here */
-  @media(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-    //background: url('../images/intro-2x.jpg') no-repeat;
-  }
-
-  /*.overlay {
-    background: rgba(0, 0, 0, .35);
+  .card-wide {
+    $padding: 2rem;
     width: 100%;
-    height: 100%;
-  }*/
+    position: relative;
+    top: 50px;
 
-  .slogan {
-    padding-top: 60px;
-    color: #fff;
-
-    @media screen and (min-width: $layout-screen-size-threshold) {
-      padding-top: 160px;
+    text-align: center;
+    @media (min-width: $grid-tablet-breakpoint) {
+      text-align: left;
     }
 
+    .photo-outer {
+      padding: $padding;
+      text-align: center;
+
+      .photo {
+        height: auto;
+        max-width: 100%;
+        max-height: 350px;
+      }
+    }
+
+    .text-outer {
+      padding: $padding;
+
+      .box-outer {
+        .box {
+          padding: 7px 12px;
+          background: $main;
+          display: inline-block;
+          color: #fff;
+          position: relative;
+          margin-bottom: 20px;
+
+          &:before {
+            content: '';
+            width: 0;
+            height: 0;
+            top: 100%;
+            left: 5px;
+            display: block;
+            position: absolute;
+            border-style: solid;
+            border-width: 0 0 12px 12px;
+            border-color: $main transparent transparent $main;
+          }
+        }
+      }
+    }
+  }
+
+  .card-bottom {
+    background: $main;
+    border-top: 0;
+    padding: 1.5rem 0;
+
+    .icons {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+
+      a {
+        $size: 40px;
+
+        margin: 0 1rem 0;
+        color: #fff;
+        font-size: 2rem;
+        height: $size;
+        width: $size;
+      }
+    }
+  }
+
+  .slogan {
+    font-size: 2.5rem;
+    line-height: 1.1;
+    font-weight: 300;
+    margin-bottom: 5px;
+
     h1 {
-      font-size: 6rem;
-      font-family: "Roboto", sans-serif;
-      //font-style: obli;
-      font-weight: 600;
+      margin-top: 0;
+      display: inline-block;
+      font-size: 2.5rem;
+      font-weight: 700;
+      margin-bottom: 5px;
     }
   }
 
   .sub-slogan {
-    color: #fff;
+    padding-bottom: 20px;
+    border-bottom: solid 1px $light-gray;
+
+    h2 {
+      font-size: 1.3rem;
+      font-weight: 400;
+      line-height: 1.1;
+      margin: 0px;
+    }
+  }
+
+  .about {
+    margin-top: 20px;
   }
 }
