Added devicons + tooltip

--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -17,8 +17,20 @@
               </div>
 
               <div class="slogan">I'm <h1>Kamil Wojtczyk</h1></div>
-              <div class="sub-slogan"><h2>Full-Stack JavaScript Developer</h2></div>
-              <div class="about">Some text here</div>
+              <div class="sub-slogan">
+                <h2>Software Developer and a <span class="tooltip">*geek
+                  <span class="tooltiptext">sort of</span></span>
+                </h2>
+              </div>
+              <div class="about">
+                <p>I'm passionate about new technology, spending a considerable amount of time each week on following
+                  trends and learning new things.</p>
+                <p>I'm mostly a <strong>full-stack JavaScript developer</strong>, however </p>
+                <div class="dev-icons">
+                  <i class="devicon-javascript-plain colored" title="JavaScript" aria-hidden="true"></i>
+                  <i class="devicon-nodejs-plain colored" title="Node.js" aria-hidden="true"></i>
+                </div>
+              </div>
             </div>
           </div>
         </div>
