--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -39,9 +39,11 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Lora|Lobster">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic">
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic">
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-red.min.css"/>
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
 
   <script src="https://use.fontawesome.com/9f9305da79.js"></script>
 </head>
