--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -104,10 +104,26 @@
       font-weight: 400;
       line-height: 1.1;
       margin: 0px;
+
+      .tooltiptext {
+        font-size: 0.75rem;
+      }
     }
   }
 
   .about {
     margin-top: 20px;
+
+    .dev-icons {
+      font-size: 5rem;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+
+      i {
+        margin: 0 1rem;
+      }
+    }
   }
 }
