Custom navbar transition based on the scrolling bar position (changed from transparent to solid colour scheme)

--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -38,9 +38,17 @@
 
       <div class="card-bottom mdl-card__actions mdl-card--border mdl-shadow--2dp">
         <div class="icons">
-          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://twitter.com/L0sKamil0s"><i class="fa fa-fw fa-twitter" aria-hidden="true"></i></a>
-          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://www.linkedin.com/in/kwojtczyk"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i></a>
-          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://github.com/LsKs"><i class="fa fa-fw fa-github" aria-hidden="true"></i></a>
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect"
+             href="https://twitter.com/L0sKamil0s" title="Twitter">
+            <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
+          </a>
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect"
+             href="https://www.linkedin.com/in/kwojtczyk" title="LinkedIn">
+            <i class="fa fa-fw fa-linkedin" aria-hidden="true"></i>
+          </a>
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://github.com/LsKs" title="Github">
+            <i class="fa fa-fw fa-github" aria-hidden="true"></i>
+          </a>
         </div>
       </div>
     </div>
