Semi-optimised main photo + fixed some minor issues

--- a/app/partials/nav.html
+++ b/app/partials/nav.html
@@ -8,10 +8,10 @@
     <div class="mdl-layout-spacer"></div>
     <!-- Navigation -->
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="#">Link</a>
-      <a class="mdl-navigation__link" href="#">Link</a>
-      <a class="mdl-navigation__link" href="#">Link</a>
-      <a class="mdl-navigation__link" href="#">Link</a>
+      <a class="mdl-navigation__link" href="#" title="WIP: Not yet implemented">Link</a>
+      <a class="mdl-navigation__link" href="#" title="WIP: Not yet implemented">Link</a>
+      <a class="mdl-navigation__link" href="#" title="WIP: Not yet implemented">Link</a>
+      <a class="mdl-navigation__link" href="#" title="WIP: Not yet implemented">Link</a>
     </nav>
   </div>
 </header>
@@ -20,9 +20,9 @@
     <span class="title">Kamil Wojtczyk</span>
   </span>
   <nav class="mdl-navigation">
-    <a class="mdl-navigation__link" href="#">Link</a>
-    <a class="mdl-navigation__link" href="#">Link</a>
-    <a class="mdl-navigation__link" href="#">Link</a>
-    <a class="mdl-navigation__link" href="#">Link</a>
+    <a class="mdl-navigation__link" href="#" title="WIP: Not yet implemented">Link</a>
+    <a class="mdl-navigation__link" href="#" title="WIP: Not yet implemented">Link</a>
+    <a class="mdl-navigation__link" href="#" title="WIP: Not yet implemented">Link</a>
+    <a class="mdl-navigation__link" href="#" title="WIP: Not yet implemented">Link</a>
   </nav>
 </div>
