--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -25,7 +25,7 @@
               <div class="about">
                 <p>I'm passionate about new technology, spending a considerable amount of time each week on following
                   trends and learning new things.</p>
-                <p>I'm mostly a <strong>full-stack JavaScript developer</strong>, however </p>
+                <p>I'm mostly a <strong>full-stack JavaScript developer</strong>, however, I'm quite versatile in using other languages/frameworks.</p>
                 <div class="dev-icons">
                   <i class="devicon-javascript-plain colored" title="JavaScript" aria-hidden="true"></i>
                   <i class="devicon-nodejs-plain colored" title="Node.js" aria-hidden="true"></i>
