--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .kw-layout {
-  background: url('../images/intro.jpg') no-repeat top / cover;
+  background: url('../images/intro.jpg') no-repeat top / cover fixed;
   position: relative;
 }
 
