Fixed an issue with space being removed from the <h1> when minifying the HTML

--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -16,7 +16,9 @@
                 <div class="box">Hi!</div>
               </div>
 
-              <div class="slogan">I'm <h1>Kamil Wojtczyk</h1></div>
+              <div class="slogan">
+                <h1>I'm <span>Kamil Wojtczyk</span></h1>
+              </div>
               <div class="sub-slogan">
                 <h2>Software Developer and a <span class="tooltip">*geek
                   <span class="tooltiptext">sort of</span></span>
