--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -83,15 +83,18 @@
   .slogan {
     font-size: 2.5rem;
     line-height: 1.1;
-    font-weight: 300;
     margin-bottom: 5px;
 
     h1 {
       margin-top: 0;
       display: inline-block;
       font-size: 2.5rem;
-      font-weight: 700;
+      font-weight: 300;
       margin-bottom: 5px;
+
+      span {
+        font-weight: 700;
+      }
     }
   }
 
