TIny optimisation update

--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -45,5 +45,5 @@
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
 
-  <script src="https://use.fontawesome.com/9f9305da79.js"></script>
+  <script async src="https://use.fontawesome.com/9f9305da79.js"></script>
 </head>
