TEST to see if Google PageSpeed rankng has improved

--- a/app/partials/scripts.html
+++ b/app/partials/scripts.html
@@ -1,10 +1,8 @@
 <!-- Blocking Styles -->
-<link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-red.min.css"/>
+<!-- Fonts -->
 <link rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic|Material+Icons|Lora|Lobster">
 <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
-<link rel="stylesheet" href="styles/main.css">
-
 <script async src="https://use.fontawesome.com/9f9305da79.js"></script>
 
 <!-- Scripts -->
