Test using loadCSS to see if Google PageSpeed rank is improved (render-blocking CSS)
Thanks to @filamentgroup: loadCSS
https://github.com/filamentgroup/loadCSS

--- a/app/partials/scripts.html
+++ b/app/partials/scripts.html
@@ -1,8 +1,11 @@
 <!-- Blocking Styles -->
 <!-- Fonts -->
-<link rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic|Material+Icons|Lora|Lobster">
-<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
+<link rel="preload" href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic|Material+Icons|Lora|Lobster" as="style" onload="this.rel='stylesheet'">
+<link rel="preload" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css" as="style" onload="this.rel='stylesheet'">
+<noscript>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic|Material+Icons|Lora|Lobster">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
+</noscript>
 <script async src="https://use.fontawesome.com/9f9305da79.js"></script>
 
 <!-- Scripts -->
