--- a/app/partials/scripts.html
+++ b/app/partials/scripts.html
@@ -2,11 +2,12 @@
 <!-- Fonts -->
 <link rel="preload" href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic|Material+Icons|Lora|Lobster" as="style" onload="this.rel='stylesheet'">
 <link rel="preload" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css" as="style" onload="this.rel='stylesheet'">
+<link rel="preload" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" as="style" onload="this.rel='stylesheet'">
 <noscript>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic|Material+Icons|Lora|Lobster">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </noscript>
-<script async src="https://use.fontawesome.com/9f9305da79.js"></script>
 
 <!-- Scripts -->
 <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
