--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -43,9 +43,11 @@
   <script>!function(t){if(t.loadCSS){var e=loadCSS.relpreload={};if(e.support=function(){try{return t.document.createElement("link").relList.supports("preload")}catch(e){return!1}},e.poly=function(){for(var e=t.document.getElementsByTagName("link"),n=0;n<e.length;n++){var r=e[n];"preload"===r.rel&&"style"===r.getAttribute("as")&&(t.loadCSS(r.href,r),r.rel=null)}},!e.support()){e.poly();var n=t.setInterval(e.poly,300);t.addEventListener&&t.addEventListener("load",function(){t.clearInterval(n)}),t.attachEvent&&t.attachEvent("onload",function(){t.clearInterval(n)})}}}(this)</script>
 
   <!-- Styles -->
-  <link rel="preload" href="styles/main.css" as="style" onload="this.rel='stylesheet'">
-  <noscript>
-    <link rel="stylesheet" href="styles/main.css">
-  </noscript>
+  @@if (env === 'production') {
+  <style>@@include('../../dist/styles/main.css')</style>
+  }
+  @@if (env !== 'production') {
+  <link rel="stylesheet" href="styles/main.css">
+  }
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-red.min.css">
 </head>
