Few minor, mostly text changes

--- a/app/partials/nav.html
+++ b/app/partials/nav.html
@@ -7,7 +7,7 @@
     <!-- Add spacer, to align navigation to the right -->
     <div class="mdl-layout-spacer"></div>
     <!-- Navigation -->
-    <nav class="mdl-navigation">
+    <nav class="mdl-navigation hidden">
       <a class="mdl-navigation__link" href="#" title="WIP: Not yet implemented">Link</a>
       <a class="mdl-navigation__link" href="#" title="WIP: Not yet implemented">Link</a>
       <a class="mdl-navigation__link" href="#" title="WIP: Not yet implemented">Link</a>
@@ -15,7 +15,7 @@
     </nav>
   </div>
 </header>
-<div class="mdl-layout__drawer">
+<div class="mdl-layout__drawer hidden">
   <span class="mdl-layout-title">
     <span class="title">Kamil Wojtczyk</span>
   </span>
