--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -20,14 +20,18 @@
                 <h1>I'm <span>Kamil Wojtczyk</span></h1>
               </div>
               <div class="sub-slogan">
-                <h2>Software Developer and a <span class="tooltip">*geek
+                <h2>Software Developer and a <span class="tooltip">geek*
                   <span class="tooltiptext">sort of</span></span>
                 </h2>
               </div>
               <div class="about">
-                <p>I'm passionate about new technology, spending a considerable amount of time each week on following
-                  trends and learning new things.</p>
-                <p>I'm mostly a <strong>full-stack JavaScript developer</strong>, however, I'm quite versatile in using other languages/frameworks.</p>
+                <p>I'm a young but passionate software developer, crazy about new technologies, breathtaking
+                  views and good coffee <i class="fa fa-coffee" aria-hidden="true"></i>.</p>
+                <p>My fellow colleagues tend to call me "Mr JavaScript" or "JavaScript boy", as I have a flair for the
+                  language and I try to follow all the latest trends in it (that's a daunting task, I know), however,
+                  with a <span class="tooltip">grain of salt<span class="tooltiptext">avoiding the #hype</span></span>.</p>
+                <p>I'm mostly a <strong>full-stack JavaScript developer</strong>, however, I'm quite versatile in using
+                  other languages/frameworks.</p>
                 <div class="dev-icons">
                   <i class="devicon-javascript-plain colored" title="JavaScript" aria-hidden="true"></i>
                   <i class="devicon-nodejs-plain colored" title="Node.js" aria-hidden="true"></i>
@@ -48,7 +52,8 @@
              href="https://www.linkedin.com/in/kwojtczyk" title="LinkedIn">
             <i class="fa fa-fw fa-linkedin" aria-hidden="true"></i>
           </a>
-          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://github.com/LsKs" title="Github">
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://github.com/LsKs"
+             title="Github">
             <i class="fa fa-fw fa-github" aria-hidden="true"></i>
           </a>
         </div>
