--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -2,9 +2,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="My personal website talking about me and my projects.">
-  <meta name="keywords" content="kamil, wojtczyk, javascript, nodejs, developer">
-  <title>Kamil Wojtczyk - JavaScript Ninja </title>
+  <meta name="description" content="Few words about me and ">
+  <meta name="keywords" content="kamil, wojtczyk, kamil wojtczyk, javascript, nodejs, developer">
+  <title>Kamil Wojtczyk - JavaScript Adept</title>
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
