--- a/app/styles/_nav.scss
+++ b/app/styles/_nav.scss
@@ -56,6 +56,7 @@
 
   .mdl-layout__drawer-button {
     color: #fff;
+    display: none;
 
     @media (min-width: $grid-desktop-breakpoint) {
       display: none;
