--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -43,5 +43,11 @@ h1, h2, h3, h4, h5, h6 {
     top: 120%;
     left: 0;
     z-index: 1;
+
+    font-size: 0.9rem;
   }
+}
+
+.hidden {
+  display: none;
 }
