SEO Changes (mostly)
Added:
- Google Tag Manager
- Popup about use of cookies
- Sitemap + Robots.txt

Updated:
- MDL to 1.3.0
- Font Awesome to 4.7.0
- Personal photo to a compressed version

--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -3,7 +3,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Few words about me and ">
-  <meta name="keywords" content="kamil, wojtczyk, kamil wojtczyk, javascript, nodejs, developer">
   <title>Kamil Wojtczyk - JavaScript Adept</title>
 
   <!-- Disable tap highlight on IE -->
@@ -49,5 +48,13 @@
   @@if (env !== 'production') {
   <link rel="stylesheet" href="styles/main.css">
   }
-  <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-red.min.css">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-red.min.css">
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-TZ7L49V');</script>
+  <!-- End Google Tag Manager -->
 </head>
