--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -6,7 +6,7 @@
         <div class="mdl-grid">
           <div class="dl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--5-col-desktop">
             <div class="photo-outer">
-              <img class="photo mdl-shadow--4dp" src="../images/me.jpg" alt="profile photo">
+              <img class="photo mdl-shadow--4dp" src="../images/me.jpg" alt="profile photo" height="350px" width="260px">
             </div>
           </div>
 
@@ -26,7 +26,7 @@
               </div>
               <div class="about">
                 <p>I'm a young but passionate software developer, crazy about new technologies, breathtaking
-                  views and good coffee <i class="fa fa-coffee" aria-hidden="true"></i>.</p>
+                  views and good IPA <i class="fa fa-beer" aria-hidden="true"></i>.</p>
                 <p>My fellow colleagues tend to call me "Mr JavaScript" or "JavaScript boy", as I have a flair for the
                   language and I try to follow all the latest trends in it (that's a daunting task, I know), however,
                   with a <span class="tooltip">grain of salt<span class="tooltiptext">avoiding the #hype</span></span>.</p>
@@ -35,6 +35,7 @@
                 <div class="dev-icons">
                   <i class="devicon-javascript-plain colored" title="JavaScript" aria-hidden="true"></i>
                   <i class="devicon-nodejs-plain colored" title="Node.js" aria-hidden="true"></i>
+                  <i class="devicon-php-plain colored" title="PHP" aria-hidden="true"></i>
                 </div>
               </div>
             </div>
