--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -11,6 +11,7 @@
     width: 100%;
     position: relative;
     top: 50px;
+    margin-bottom: 2rem;
 
     text-align: center;
     @media (min-width: $grid-tablet-breakpoint) {
