--- a/app/partials/scripts.html
+++ b/app/partials/scripts.html
@@ -2,32 +2,31 @@
 <!-- Fonts -->
 <link rel="preload" href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic|Material+Icons|Lora|Lobster" as="style" onload="this.rel='stylesheet'">
 <link rel="preload" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css" as="style" onload="this.rel='stylesheet'">
-<link rel="preload" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" as="style" onload="this.rel='stylesheet'">
+<link rel="preload" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" as="style" onload="this.rel='stylesheet'">
 <noscript>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic|Material+Icons|Lora|Lobster">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
 </noscript>
 
 <!-- Scripts -->
-<script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <!-- build:js scripts/main.min.js -->
 <script src="scripts/main.js"></script>
 <!-- endbuild -->
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+<script src="https://use.fontawesome.com/9f9305da79.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
 <script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r;
-    i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date();
-    a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0];
-    a.async = 1;
-    a.src = g;
-    m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-57230724-2', 'auto');
-  ga('send', 'pageview');
+  window.addEventListener("load", function(){
+    window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#252e39"
+        },
+        "button": {
+          "background": "#1eaaf1"
+        }
+      },
+      "theme": "edgeless"
+    })});
 </script>
