Another minor SEO changes

--- a/app/partials/nav.html
+++ b/app/partials/nav.html
@@ -2,7 +2,7 @@
   <div class="mdl-layout__header-row">
     <!-- Title -->
     <span class="mdl-layout-title">
-      <a href="/" title="Wojtczyk.net"><img class="logo" src="images/wojtczyk_logo_small.png" alt="Logo"></a>
+      <a href="/" title="Wojtczyk.net"><img class="logo" src="images/wojtczyk_logo_small.png" alt="Logo" height="40px" width="40px"></a>
     </span>
     <!-- Add spacer, to align navigation to the right -->
     <div class="mdl-layout-spacer"></div>
