--- a/app/partials/scripts.html
+++ b/app/partials/scripts.html
@@ -10,7 +10,7 @@
 </noscript>
 
 <!-- Scripts -->
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.min.js"></script>
 <!-- build:js scripts/main.min.js -->
 <script src="scripts/main.js"></script>
 <!-- endbuild -->
