Text change + cleanup

--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -20,22 +20,20 @@
                 <h1>I'm <span>Kamil Wojtczyk</span></h1>
               </div>
               <div class="sub-slogan">
-                <h2>Software Developer and a <span class="tooltip">geek*
+                <h2>Software Engineer and a <span class="tooltip">geek*
                   <span class="tooltiptext">sort of</span></span>
                 </h2>
               </div>
               <div class="about">
-                <p>I'm a young but passionate software developer, crazy about new technologies, breathtaking
+                <p>I'm a young and passionate programmer, crazy about new technologies, breathtaking
                   views and good IPA <i class="fa fa-beer" aria-hidden="true"></i>.</p>
-                <p>My fellow colleagues tend to call me "Mr JavaScript" or "JavaScript boy", as I have a flair for the
-                  language and I try to follow all the latest trends in it (that's a daunting task, I know), however,
-                  with a <span class="tooltip">grain of salt<span class="tooltiptext">avoiding the #hype</span></span>.</p>
-                <p>I'm mostly a <strong>full-stack JavaScript developer</strong>, however, I'm quite versatile in using
-                  other languages/frameworks.</p>
+                <p>I've recently graduated from university and currently work as a <strong>full-stack developer</strong>, writing code in
+                  <span class="tooltip">modern*<span class="tooltiptext">ideally!</span></span> languages & frameworks.</p>
                 <div class="dev-icons">
-                  <i class="devicon-javascript-plain colored" title="JavaScript" aria-hidden="true"></i>
                   <i class="devicon-nodejs-plain colored" title="Node.js" aria-hidden="true"></i>
+                  <i class="devicon-go-line colored" title="Go" aria-hidden="true"></i>
                   <i class="devicon-php-plain colored" title="PHP" aria-hidden="true"></i>
+                  <i class="devicon-react-original colored" title="React" aria-hidden="true"></i>
                 </div>
               </div>
             </div>
