--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Few words about me and ">
-  <title>Kamil Wojtczyk - JavaScript Adept</title>
+  <title>Kamil Wojtczyk - Full Stack Developer</title>
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
