Minor layout fixes + cleanup

--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -25,15 +25,24 @@
                 </h2>
               </div>
               <div class="about">
-                <p>I'm a young and passionate programmer, crazy about new technologies, breathtaking
-                  views and good IPA <i class="fa fa-beer" aria-hidden="true"></i>.</p>
-                <p>I've recently graduated from university and currently work as a <strong>full-stack developer</strong>, writing code in
+                <p>I'm a young and passionate programmer, crazy about new technologies, breathtaking views and good IPA <i class="fa fa-beer"
+                    aria-hidden="true"></i>.</p>
+                <p>I've recently graduated from university and currently work as a <strong>full-stack developer</strong>, writing
+                  code in
                   <span class="tooltip">modern*<span class="tooltiptext">ideally!</span></span> languages & frameworks.</p>
-                <div class="dev-icons">
-                  <i class="devicon-nodejs-plain colored" title="Node.js" aria-hidden="true"></i>
-                  <i class="devicon-go-line colored" title="Go" aria-hidden="true"></i>
-                  <i class="devicon-php-plain colored" title="PHP" aria-hidden="true"></i>
-                  <i class="devicon-react-original colored" title="React" aria-hidden="true"></i>
+                <div class="mdl-grid dev-icons">
+                  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone">
+                    <i class="devicon-nodejs-plain colored" title="Node.js" aria-hidden="true"></i>
+                  </div>
+                  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone">
+                    <i class="devicon-go-line colored" title="Go" aria-hidden="true"></i>
+                  </div>
+                  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone">
+                    <i class="devicon-php-plain colored" title="PHP" aria-hidden="true"></i>
+                  </div>
+                  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone">
+                    <i class="devicon-react-original colored" title="React" aria-hidden="true"></i>
+                  </div>
                 </div>
               </div>
             </div>
@@ -43,16 +52,13 @@
 
       <div class="card-bottom mdl-card__actions mdl-card--border mdl-shadow--2dp">
         <div class="icons">
-          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect"
-             href="https://twitter.com/L0sKamil0s" title="Twitter">
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://twitter.com/L0sKamil0s" title="Twitter">
             <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
           </a>
-          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect"
-             href="https://www.linkedin.com/in/kwojtczyk" title="LinkedIn">
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://www.linkedin.com/in/kwojtczyk" title="LinkedIn">
             <i class="fa fa-fw fa-linkedin" aria-hidden="true"></i>
           </a>
-          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://github.com/LsKs"
-             title="Github">
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://github.com/LsKs" title="Github">
             <i class="fa fa-fw fa-github" aria-hidden="true"></i>
           </a>
         </div>
