--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -52,13 +52,13 @@
 
       <div class="card-bottom mdl-card__actions mdl-card--border mdl-shadow--2dp">
         <div class="icons">
-          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://twitter.com/L0sKamil0s" title="Twitter">
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://twitter.com/xK0ff33" title="Twitter">
             <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
           </a>
           <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://www.linkedin.com/in/kwojtczyk" title="LinkedIn">
             <i class="fa fa-fw fa-linkedin" aria-hidden="true"></i>
           </a>
-          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://github.com/LsKs" title="Github">
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://github.com/xK0ff33" title="Github">
             <i class="fa fa-fw fa-github" aria-hidden="true"></i>
           </a>
         </div>
