--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -17,19 +17,21 @@
               </div>
 
               <div class="slogan">
-                <h1>I'm <span>Kamil Wojtczyk</span></h1>
+                <h1>I'm
+                  <span>Kamil Wojtczyk</span>
+                </h1>
               </div>
               <div class="sub-slogan">
-                <h2>Software Engineer and a <span class="tooltip">geek*
-                  <span class="tooltiptext">sort of</span></span>
-                </h2>
+                <h2>Full stack developer</h2>
               </div>
               <div class="about">
-                <p>I'm a young and passionate programmer, crazy about new technologies, breathtaking views and good IPA <i class="fa fa-beer"
+                <p>I'm a young and passionate programmer, crazy about new technologies, breathtaking views and good IPA
+                  <i class="fa fa-beer"
                     aria-hidden="true"></i>.</p>
-                <p>I've recently graduated from university and currently work as a <strong>full-stack developer</strong>, writing
-                  code in
-                  <span class="tooltip">modern*<span class="tooltiptext">ideally!</span></span> languages & frameworks.</p>
+                <p>I've recently graduated from university and currently work as a full-stack developer, writing code in
+                  <span class="tooltip">modern*
+                    <span class="tooltiptext">ideally!</span>
+                  </span> languages & frameworks.</p>
                 <div class="mdl-grid dev-icons">
                   <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone">
                     <i class="devicon-nodejs-plain colored" title="Node.js" aria-hidden="true"></i>
@@ -52,6 +54,9 @@
 
       <div class="card-bottom mdl-card__actions mdl-card--border mdl-shadow--2dp">
         <div class="icons">
+          <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" data-name="k.wojtczyk" data-domain="gmail" data-tld="com" href="#" class="cryptedmail" onclick="window.location.href = 'mailto:' + this.dataset.name + '@' + this.dataset.domain + '.' + this.dataset.tld" title="Email">
+            <i class="fa fa-fw fa-envelope" aria-hidden="true"></i>
+          </a>
           <a class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" href="https://twitter.com/xK0ff33" title="Twitter">
             <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
           </a>
