--- a/app/partials/scripts.html
+++ b/app/partials/scripts.html
@@ -1,11 +1,7 @@
 <!-- Blocking Styles -->
 <!-- Fonts -->
-<link rel="preload" href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic|Material+Icons|Lora|Lobster" as="style" onload="this.rel='stylesheet'">
-<link rel="preload" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css" as="style" onload="this.rel='stylesheet'">
-<noscript>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic|Material+Icons|Lora|Lobster">
-  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
-</noscript>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Roboto:400,400italic,500,500italic,700,700italic|Material+Icons|Lora|Lobster" as="style" onload="this.rel='stylesheet'">
+<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css" as="style" onload="this.rel='stylesheet'">
 
 <!-- Scripts -->
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.min.js"></script>
