--- a/app/partials/sections/intro.html
+++ b/app/partials/sections/intro.html
@@ -31,7 +31,8 @@
                 <p>I've recently graduated from university and currently work as a full-stack developer, writing code in
                   <span class="tooltip">modern*
                     <span class="tooltiptext">ideally!</span>
-                  </span> languages & frameworks.</p>
+                  </span>
+                  &nbsp;languages & frameworks.</p>
                 <div class="mdl-grid dev-icons">
                   <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone">
                     <i class="devicon-nodejs-plain colored" title="Node.js" aria-hidden="true"></i>
